# request-builder

./: README.md  pyproject.toml  request_builder.py  requirements.txt  setup.py
requestsbuilder/: __init__.py
src/request_builder/: __init__.py  abstract_request_builder.py  json_request_builder.py  raw_request_builder.py  xml_request_builder.py
tests/: assets.py  test_sanity.py  test_unit.py
tests/assets/: test_file.txt
